--- a/index.html
+++ b/index.html
@@ -15,96 +15,109 @@
         <title>oh my food</title>
     </head>
     <body>
-        <header>
-            <img src="images/logo/ohmyfood.png" alt="logo">
-        </header>
-        <div class="desktop">
-            <nav>
-                <div class="ville">
-                    <p><i class="fa fa-map-marker-alt"></i>Paris, Belleville</p>
-                </div>
-                <div class="intro">
-                    <h1>Réservez le menu qui<br> vous convient</h1>
-                    <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins.</p>
-                </div>
-                <div class="liennav">
-                    <a href="#Restaurants" class="btnnav">
-                        Explorer nos restaurants
+        <div class="loading">
+            <span class="mot1">Oh</span>
+            <span class="mot2">My</span>
+            <span class="mot3">Food</span>
+        </div>
+            <header>
+                <img src="images/logo/ohmyfood.png" alt="logo">
+            </header>
+            <div class="desktop">
+                <nav>
+                    <div class="ville">
+                        <p><i class="fa fa-map-marker-alt"></i>Paris, Belleville</p>
+                    </div>
+                    <div class="intro">
+                        <h1>Réservez le menu qui<br> vous convient</h1>
+                        <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins.</p>
+                    </div>
+                    <div class="liennav">
+                        <a href="#Restaurants" class="btnnav">
+                            Explorer nos restaurants
+                        </a>
+                    </div>
+                </nav>
+                <section class="fonction">
+                    <div class="fonctionnement">
+                        <h2>Fonctionnement</h2>
+                        <ul>
+                            <li><p>1</p><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li>
+                            <li><p>2</p><i class="fa fa-list-ul"></i>Composez votre menu</li>
+                            <li><p>3</p><i class="fa fa-store"></i>Dégustez au restaurant</li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+            <section class="lesresto">
+                <h2 id="Restaurants">Restaurants</h2>
+                <div class="resto">
+                    <a href="./restaurant/La_palette_du_gout.html">
+                        <div class="imageresto">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"><p>Nouveau</p>
+                        </div>
+                        <div class="info">
+                            <div class="texte">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="coeur">
+                                <p class="coeurvide"><i class="far fa-heart"></i></p><p class="coeurplein"><i class="fas fa-heart"></i></p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="./restaurant/La_note_enchantée.html">
+                        <div class="imageresto">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"><p>Nouveau</p>
+                        </div>
+                        <div class="info">
+                            <div class="texte">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="coeur">
+                                <p class="coeurvide"><i class="far fa-heart"></i></p><p class="coeurplein"><i class="fas fa-heart"></i></p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="./restaurant/A_la_française.html">
+                        <div class="imageresto">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                        </div>
+                        <div class="info">
+                            <div class="texte">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="coeur">
+                                <p class="coeurvide"><i class="far fa-heart"></i></p><p class="coeurplein"><i class="fas fa-heart"></i></p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="./restaurant/Le_délice_des_sens.html">
+                        <div class="imageresto">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        </div>
+                        <div class="info">
+                            <div class="texte">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="coeur">
+                                <p class="coeurvide"><i class="far fa-heart"></i></p><p class="coeurplein"><i class="fas fa-heart"></i></p>
+                            </div>
+                        </div>
                     </a>
                 </div>
-            </nav>
-            <section class="fonction">
-                <div class="fonctionnement">
-                    <h2>Fonctionnement</h2>
-                    <ul>
-                        <li><p>1</p><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li>
-                        <li><p>2</p><i class="fa fa-list-ul"></i>Composez votre menu</li>
-                        <li><p>3</p><i class="fa fa-store"></i>Dégustez au restaurant</li>
-                    </ul>
-                </div>
             </section>
-        </div>
-        <section class="lesresto">
-            <h2 id="Restaurants">Restaurants</h2>
-            <div class="resto">
-                <a href="./restaurant/La_palette_du_gout.html">
-                    <div class="imageresto">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"><p>Nouveau</p>
-                    </div>
-                    <div class="info">
-                        <div class="texte">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <i class="far fa-heart"></i><p class="coeurplein"><i class="fas fa-heart"></i></p>
-                    </div>
-                </a>
-                <a href="./restaurant/La_note_enchantée.html">
-                    <div class="imageresto">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"><p>Nouveau</p>
-                    </div>
-                    <div class="info">
-                        <div class="texte">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
-                        </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-                <a href="./restaurant/A_la_française.html">
-                    <div class="imageresto">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                    </div>
-                    <div class="info">
-                        <div class="texte">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                        </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-                <a href="./restaurant/Le_délice_des_sens.html">
-                    <div class="imageresto">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                    </div>
-                    <div class="info">
-                        <div class="texte">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                        </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-            </div>
-        </section>
-        <footer>
-            <h2>ohmyfood</h2>
-            <ul>
-                <li><a href="#"><i class="fa fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a href="#"><i class="fa fa-hands-helping"></i>Devenir partenaire</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="mailto:ohmyfood@ohmyfood.fr">Contact</a></li>
-            </ul>
-        </footer>
+            <footer>
+                <h2>ohmyfood</h2>
+                <ul>
+                    <li><a href="#"><i class="fa fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fa fa-hands-helping"></i>Devenir partenaire</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="mailto:ohmyfood@ohmyfood.fr">Contact</a></li>
+                </ul>
+            </footer>
     </body>
 </html>
