--- a/restaurant/A_la_française.html
+++ b/restaurant/A_la_française.html
@@ -27,64 +27,91 @@
             </section>
             <section class="entrées">
                 <h2>Entrées</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <div class="commentaire"><p>Aux zestes d'orange</p><p class="prix">25€</p></div>
+                        <div class="intitule">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <div class="commentaire"><p>Aux zestes d'orange</p><p class="prix">25€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <div class="commentaire"><p>Carotte, panais, topinambour</p><p class="prix">35€</p></div>
+                        <div class="intitule">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <div class="commentaire"><p>Carotte, panais, topinambour</p><p class="prix">35€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Soupe à l'oignon</h3>
-                        <div class="commentaire"><p>Revisitée</p><p class="prix">20€</p></div>
+                        <div class="intitule">
+                            <h3>Soupe à l'oignon</h3>
+                            <div class="commentaire"><p>Revisitée</p><p class="prix">20€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
             <section class="plats">
                 <h2>Plats</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <div class="commentaire"><p>Accompagnées d'une purée de panais</p><p class="prix">40€</p></div>
+                        <div class="intitule">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <div class="commentaire"><p>Accompagnées d'une purée de panais</p><p class="prix">40€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Magret de canard</h3>
-                        <div class="commentaire"><p>Et parmentier de pommes de terre</p><p class="prix">35€</p></div>
+                        <div class="intitule">
+                            <h3>Magret de canard</h3>
+                            <div class="commentaire"><p>Et parmentier de pommes de terre</p><p class="prix">35€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                        <div class="commentaire"><p>Sur son lit de gnocchis aux légumes</p><p class="prix">44€</p></div>
+                        <div class="intitule">
+                            <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                            <div class="commentaire"><p>Sur son lit de gnocchis aux légumes</p><p class="prix">44€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
             <section class="desserts">
                 <h2>Desserts</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Pétales de violettes glacés</h3>
-                        <div class="commentaire"><p>Et purée de noisettes</p><p class="prix">18€</p></div>
+                        <div class="intitule">
+                            <h3>Pétales de violettes glacés</h3>
+                            <div class="commentaire"><p>Et purée de noisettes</p><p class="prix">18€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Fondant au chocolat</h3>
-                        <div class="commentaire"><p>Revisité</p><p class="prix">22€</p></div>
+                        <div class="intitule">
+                            <h3>Fondant au chocolat</h3>
+                            <div class="commentaire"><p>Revisité</p><p class="prix">22€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Millefeuille croustillant</h3>
-                        <div class="commentaire"><p>Myrtilles et pâte d'amande</p><p class="prix">23€</p></div>
+                        <div class="intitule">
+                            <h3>Millefeuille croustillant</h3>
+                            <div class="commentaire"><p>Myrtilles et pâte d'amande</p><p class="prix">23€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
