--- a/restaurant/La_note_enchantée.html
+++ b/restaurant/La_note_enchantée.html
@@ -27,70 +27,100 @@
             </section>
             <section class="entrées">
                 <h2>Entrées</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Ravioles de foie gras</h3>
-                        <div class="commentaire"><p>Accompagnés de leur crème à la truffe</p><p class="prix">25€</p></div>
+                        <div class="intitule">
+                            <h3>Ravioles de foie gras</h3>
+                            <div class="commentaire"><p>Accompagnés de leur crème à la truffe</p><p class="prix">25€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Caviar osciètre</h3>
-                        <div class="commentaire"><p>Sur blini à la farine de blé noir</p><p class="prix">35€</p></div>
+                        <div class="intitule">
+                            <h3>Caviar osciètre</h3>
+                            <div class="commentaire"><p>Sur blini à la farine de blé noir</p><p class="prix">35€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Homard et espuma de potiron</h3>
-                        <div class="commentaire"><p>Mariné aux zestes d'orange</p><p class="prix">20€</p></div>
+                        <div class="intitule">
+                            <h3>Homard et espuma de potiron</h3>
+                            <div class="commentaire"><p>Mariné aux zestes d'orange</p><p class="prix">20€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection4">
                     <a href="#">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <div class="commentaire"><p>Confiture de figue et pain toasté</p><p class="prix">35€</p></div>
+                        <div class="intitule">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <div class="commentaire"><p>Confiture de figue et pain toasté</p><p class="prix">35€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
             <section class="plats">
                 <h2>Plats</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <div class="commentaire"><p>Sur lit de purée de céleri-rave</p><p class="prix">40€</p></div>
+                        <div class="intitule">
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <div class="commentaire"><p>Sur lit de purée de céleri-rave</p><p class="prix">40€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Langoustine poêlée</h3>
-                        <div class="commentaire"><p>Purée de patate douce</p><p class="prix">35€</p></div>
+                        <div class="intitule">
+                            <h3>Langoustine poêlée</h3>
+                            <div class="commentaire"><p>Purée de patate douce</p><p class="prix">35€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Mijoté de queue de boeuf</h3>
-                        <div class="commentaire"><p>Et riz sauvage aux zestes de citron</p><p class="prix">44€</p></div>
+                        <div class="intitule">
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <div class="commentaire"><p>Et riz sauvage aux zestes de citron</p><p class="prix">44€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
             <section class="desserts">
                 <h2>Desserts</h2>
-                <div class="selection">
+                <div class="selection1">
                     <a href="#">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <div class="commentaire"><p>Glace au caramel brun et sel de Guérande</p><p class="prix">18€</p></div>
+                        <div class="intitule">
+                            <h3>Macaron noisette et chocolat</h3>
+                            <div class="commentaire"><p>Glace au caramel brun et sel de Guérande</p><p class="prix">18€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection2">
                     <a href="#">
-                        <h3>Baba au rhum revisité</h3>
-                        <div class="commentaire"><p>Avec son coulis de citron</p><p class="prix">22€</p></div>
+                        <div class="intitule">
+                            <h3>Baba au rhum revisité</h3>
+                            <div class="commentaire"><p>Avec son coulis de citron</p><p class="prix">22€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
-                <div class="selection">
+                <div class="selection3">
                     <a href="#">
-                        <h3>Tarte au citron meringuée</h3>
-                        <div class="commentaire"><p>Déstructurée</p><p class="prix">23€</p></div>
+                        <div class="intitule">
+                            <h3>Tarte au citron meringuée</h3>
+                            <div class="commentaire"><p>Déstructurée</p><p class="prix">23€</p></div>
+                        </div>
+                        <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
                 </div>
             </section>
